testsuite/tests/linear/should_compile/LinearTH1.hs
{-# LANGUAGE LinearTypes, TemplateHaskell #-}
{-# LANGUAGE NoMonomorphismRestriction #-}

module LinearTH1 where

x1 = [t|Int -> Int|]
