testsuite/tests/linear/should_fail/LinearTH1.hs
{-# LANGUAGE LinearTypes, TemplateHaskell #-}
module LinearTH1 where

x1 = [t|Int ->. Int|]
